-- add support for first writing random data to partitions before creating an encryped container in them.
-- add support for "/etc/zuluCrypttab". A place to add additional paths to devices to be considered system devices.
-- various security related fixes.
-- add support for encrypting stand alone files

version 4.5.1
-- add the ability to manage system volumes in the UI,the GUI must be running from root account for the ability to be enabled
-- by default, volumes are opened in read/write mode.

version 4.5.2
-- a quick update to fix a regression in stand alone file encryption.

version 4.5.3
-- add a plug in architecture. Its now possible to send zulucrypt-cli passphrases through different means, default plugins can retrieve
   passphrases from kde kwallet,gnome keyring,gpg encryped key files and a combination of keyfile and passphrase.
-- show a dialog to warn a user the volume will be opened in read only mode when whey tick the option for the first time.
-- passphrases are sent to the back end in a more secure way using unix local socket.
-- small attempt to hide passphrases from ps command if they are passed through the command line argument.
-- passphrases stored in kde kwallet can be managed from within zulucrypt-gui if their support is enabled at build time.

version 4.6.0
-- add support for opening and closing of truecrypt volumes,this feature need cryptsetup >= 1.6.0

version 4.6.1
-- fix a regression that caused volumes presented by their UUID not to working

version 4.6.2
-- add config option to not build KDE and/or GNOME support even when the system has support for them
-- add support for LVM volumes
-- add support for consulting udev in addition to fstab when deciding if a system is system or not
-- add tcplay as an optional dependency to allow creation of truecrypt volumes
-- fix bug:truecrypt volumes with multiple ciphers did not close properly
-- fix bug:volumes did not close properly if mount point had a space character among others in it